# solaris-observe

./: README.md  pyproject.toml
legacy/: README.md  Sun_20250530_120000.lis  convertitore_schedule.py  esecuzione_scansione.py  motor.py  parametri_solari.py
solaris_observe/: __init__.py
solaris_observe/cli/: main.py
solaris_observe/config/examples/: driver_udp.yaml  site_TG.yaml
solaris_observe/core/: coords.py  patterns.py  schedule.py  tracker.py
solaris_observe/drivers/: base.py  sim_motor.py  udp_motor.py
solaris_observe/io/: logging.py  trace.py
solaris_observe/runner/: schedule_runner.py  track_runner.py
solaris_observe/utils/: timebox.py
tests/integration/: test_schedule_runner_sim.py
tests/unit/: test_schedule_parser.py
